<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<EditText
				android:id="@+id/launcher_username_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:hint="@string/login_username_hint"
				android:inputType="textEmailAddress"/>

			<EditText
				android:id="@+id/ram"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:hint="内存"
				android:inputType="number"/>

			<Button
				android:id="@+id/launcher_login_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/login_button"/>

			<Button
				android:id="@+id/launcher_play_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/play_demo"/>

			<Button
				android:id="@+id/launcher_root_mode_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="root模式(非必须,用于安卓6+)"/>

			<Button
				android:id="@+id/launcher_import_resource_pack_button"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/login_import_resource_pack"/>

			<Spinner
				android:id="@+id/launcher_version_spinner"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>

			<ProgressBar
				android:id="@+id/launcher_progress_bar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:visibility="gone"/>

			<TextView
				android:id="@+id/launcher_progress_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>

			<TextView
				android:id="@+id/launcher_recommendation_text"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>

			<TextView
				android:id="@+id/launcher_extra_info_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/login_extra_info_text"/>

		</LinearLayout>

	</ScrollView>

</RelativeLayout>

